src/test/resources/frontendReference/invalid/syntaxErr/sequence/doubleSeq.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:7 -- no viable alternative at input ';'
1 parser error(s) detected, no further compilation attempted.
